# go-bazel

./: .gitignore  LICENSE  README.md  WORKSPACE.bazel  go.mod
cmd/: BUILD.bazel  main.go
handlers/: BUILD.bazel  handler.go
pkg/greeting/: BUILD.bazel  greetings.go
