load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "greeting",
    srcs = ["greetings.go"],
    importpath = "https:/github.com/alanktwong/go-bazel/pkg/greeting",
    visibility = ["//visibility:public"],
)

go_test(
    name = "greeting_test",
    srcs = ["greeting_test.go"],
    embed = [":greeting"],
)
